<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true" >

    <RelativeLayout
        android:id="@+id/acount_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <EditText
            android:id="@+id/account"
            style="@style/editText_style"
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/margin16"
            android:layout_marginLeft="@dimen/margin32"
            android:layout_marginRight="@dimen/margin32"
            android:layout_marginTop="@dimen/margin32"
            android:hint="@string/account" />

        <ImageView
            android:id="@+id/account_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/account"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin4"
            android:contentDescription="@string/app_name"
            android:src="@drawable/delete" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/acount_layout"
        android:layout_centerHorizontal="true" >

        <EditText
            android:id="@+id/password"
            style="@style/editText_style"
            android:layout_width="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/margin16"
            android:layout_marginLeft="@dimen/margin32"
            android:layout_marginRight="@dimen/margin32"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <ImageView
            android:id="@+id/password_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/password"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin4"
            android:contentDescription="@string/app_name"
            android:src="@drawable/delete" />
    </RelativeLayout>

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/password_layout"
        android:layout_marginRight="@dimen/margin32"
        android:background="@drawable/selector_login_btn_blue"
        android:gravity="center"
        android:paddingLeft="@dimen/margin16"
        android:paddingRight="@dimen/margin16"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/text18" />

    <TextView
        android:id="@+id/registe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/login"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/password_layout"
        android:layout_marginLeft="@dimen/margin32"
        android:gravity="center"
        android:paddingLeft="@dimen/margin16"
        android:paddingRight="@dimen/margin16"
        android:text="@string/registe"
        android:textColor="@drawable/selector_common_link_text"
        android:textSize="@dimen/text18" />

</RelativeLayout>