<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="@dimen/margin32"
        android:layout_marginRight="@dimen/margin32"
        android:layout_marginTop="@dimen/margin16"
        android:drawableLeft="@drawable/common_tip"
        android:drawablePadding="@dimen/margin8"
        android:gravity="center"
        android:paddingBottom="@dimen/margin8"
        android:paddingTop="@dimen/margin8"
        android:text="@string/tips"
        android:textColor="@color/common_light_grey"
        android:textSize="@dimen/text16" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin32"
        android:layout_marginTop="@dimen/margin8"
        android:background="@drawable/drawable_corner_top_ligth_blue"
        android:paddingLeft="@dimen/margin8"
        android:paddingRight="@dimen/margin8"
        android:paddingTop="@dimen/margin8"
        android:text="@string/write_"
        android:textColor="@color/common_light_black"
        android:textSize="@dimen/text18" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin16"
        android:layout_marginLeft="@dimen/margin16"
        android:layout_marginRight="@dimen/margin16"
        android:background="@drawable/drawable_corner_ligth_blue"
        android:paddingBottom="@dimen/margin16"
        android:paddingLeft="@dimen/margin8"
        android:paddingRight="@dimen/margin8"
        android:paddingTop="@dimen/margin16" >

        <EditText
            android:id="@+id/comment_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin16"
            android:layout_marginRight="@dimen/margin16"
            android:background="@drawable/selector_common_edtitext_background"
            android:gravity="top|left"
            android:hint="@string/content"
            android:padding="@dimen/margin8"
            android:textColor="@color/common_light_black"
            android:textSize="@dimen/text18" />
    </FrameLayout>

</LinearLayout>